# Cpp20

./: test.sh
AbstractClassAsInterfaces/: .gitignore  CMakeLists.txt  setting.nn
AccessingBytesInC/: CMakeLists.txt  setting.nn
CircularShift/: CMakeLists.txt  setting.nn
CopyAssignmentOperator/: CMakeLists.txt  setting.nn
CopyAssignmentOpereatorForOtherTypes/: CMakeLists.txt  setting.nn
CustomTypeConversion/: CMakeLists.txt  setting.nn
ExceptionHandling/: .gitignore  CMakeLists.txt  setting.nn
Functors/: CMakeLists.txt  setting.nn
IITM/: CMakeLists.txt  setting.nn
Pointers/: CMakeLists.txt  setting.nn
StringSeprationinC/: CMakeLists.txt  setting.nn
UnaryPostfixIncrement/: CMakeLists.txt  setting.nn
UnaryPrefixIncrement/: CMakeLists.txt  setting.nn
additionAsMember/: CMakeLists.txt  setting.nn
additionAsNonMember/: CMakeLists.txt  setting.nn
algo/: .gitignore  CMakeLists.txt  setting.nn
calculator_in_cpp/: .gitignore  CMakeLists.txt  setting.nn
cgAssignmentIITM-1/: CMakeLists.txt  setting.nn
cgAssignmentIITM-2/: CMakeLists.txt  setting.nn
cgAssignmentIITM-4/: CMakeLists.txt  setting.nn
class/: CMakeLists.txt  setting.nn
class/src/: constants.h  cylinder.cc  cylinder.h  header.h  main.cc  test.cc  test.h
concepts/: CMakeLists.txt  setting.nn
constClasses/: CMakeLists.txt  setting.nn
constructorDelegation/: CMakeLists.txt  setting.nn
containers/deque/: CMakeLists.txt  setting.nn
containers/deque/src/: User.cpp  User.h  main.cc
copyConstructor/: CMakeLists.txt  setting.nn
cstrings/: CMakeLists.txt  setting.nn
customTermination/: .gitignore  CMakeLists.txt  setting.nn
custom_iterators/: .gitignore  CMakeLists.txt  setting.nn
deleteConstructor/: CMakeLists.txt  setting.nn
dynamicCast/: CMakeLists.txt  setting.nn
ebill/: CMakeLists.txt  setting.nn
explicitConstrcutor/: CMakeLists.txt  setting.nn
forwardDeclaration/: CMakeLists.txt  setting.nn
friendFunctionAndclasssed/: CMakeLists.txt  setting.nn
function_like_entities/: .gitignore  CMakeLists.txt  setting.nn
helloCpp/: CMakeLists.txt  setting.nn
helloThreads/: CMakeLists.txt  setting.nn
inheritance/: CMakeLists.txt  setting.nn
inheritance/src/: main.cc  person.cc  person.h  player.cc  player.h
initializerListConstructor/: CMakeLists.txt  setting.nn
inlineVariablesAndFunctions/: CMakeLists.txt  setting.nn
linkage/: CMakeLists.txt  setting.nn
moveConstructor/: CMakeLists.txt  setting.nn
move_semantics/: CMakeLists.txt  setting.nn
move_semantics/src/: main.cc
multi_level_inheritance/: .gitignore  CMakeLists.txt  setting.nn
namespaceAliases/: CMakeLists.txt  setting.nn
namespacesInCpp/: CMakeLists.txt  setting.nn
operatorOverloading/: .gitignore  CMakeLists.txt  setting.nn
polymorphism/: CMakeLists.txt  setting.nn
programsWithMFiles/: CMakeLists.txt  setting.nn
ranges/: .gitignore  CMakeLists.txt  setting.nn
sharedPointer/: .gitignore  CMakeLists.txt  setting.nn
smartPointers/: CMakeLists.txt  setting.nn
sqrt/: CMakeLists.txt  setting.nn
staticInCpp/: CMakeLists.txt  setting.nn
struct/: CMakeLists.txt  setting.nn
struct/src/: main.c
templateGenerator/: CMakeLists.txt  setting.nn
templateGenerator/src/: main.c
templates/: .gitignore  (+2 more)
view/: CMakeLists.txt  setting.nn
view/src/: main.cc
(+131 files in other folders)
